feat: 添加复制请求功能
在请求服务中新增 `copyRequest` 方法，用于复制指定请求。扩展命令 `httpClient.copyRequest` 已注册，用户可通过界面操作复制请求。复制后的请求名称将附加 "(复制)" 以区分原请求。

--- a/package.json
+++ b/package.json
@@ -69,6 +69,10 @@
         "title": "❌ 删除请求"
       },
       {
+        "command": "httpClient.copyRequest",
+        "title": "📋 复制请求"
+      },
+      {
         "command": "httpClient.loadRequest",
         "title": "view more",
         "icon": "$(eye)"
@@ -111,6 +115,11 @@
         },
         {
           "command": "httpClient.deleteRequest",
+          "when": "view == httpClientDirectories && viewItem == request",
+          "group": "1_modification"
+        },
+        {
+          "command": "httpClient.copyRequest",
           "when": "view == httpClientDirectories && viewItem == request",
           "group": "1_modification"
         }
