chore: Update package.json for rebranding and publisher change
- Rename package from "vscode-http-client" to "tunder-http-client"
- Update display name to "Tunder Http Client"
- Change publisher from "o98k" to "o98k-ok"

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vscode-http-client",
-  "displayName": "Tunder Client",
+  "name": "tunder-http-client",
+  "displayName": "Tunder Http Client",
   "description": "Just Fuck Thunder Client",
   "version": "0.1.2",
-  "publisher": "o98k",
+  "publisher": "o98k-ok",
   "icon": "media/icon.png",
   "engines": {
     "vscode": "^1.60.0"
