feat(extension): 添加打开存储目录的命令
新增命令 `httpClient.openStorageFolder`，用于打开扩展的存储目录。该命令会在文件管理器中显示存储目录，并在目录不存在时自动创建。此功能提升了用户访问和管理存储目录的便捷性。

--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
         "title": "打开[Tunder Client]"
       },
       {
+        "command": "httpClient.openStorageFolder",
+        "title": "👐 存储目录",
+        "icon": "$(folder-opened)"
+      },
+      {
         "command": "httpClient.createFolder",
         "title": "➕ 创建目录",
         "icon": "$(new-folder)"
@@ -82,9 +87,14 @@
     "menus": {
       "view/title": [
         {
+          "command": "httpClient.openStorageFolder",
+          "when": "view == httpClientDirectories",
+          "group": "navigation@1"
+        },
+        {
           "command": "httpClient.createFolder",
           "when": "view == httpClientDirectories",
-          "group": "navigation"
+          "group": "navigation@2"
         }
       ],
       "view/item/context": [
