--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "version": "0.1.9",
   "publisher": "o98k-ok",
   "icon": "media/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/o98k-ok/Tunder-Client.git"
+  },
+  "license": "MIT",
   "engines": {
     "vscode": "^1.60.0"
   },
